# primal

./: .gitignore  .travis.yml  Dockerfile  README  README.md  configure.ac  default.nix  primal.cxx
include/: client.hpp  interface.hpp  miller_rabin.hpp  primal.hpp  server.hpp  utils.hpp
src/: Makefile.am  client.cxx  primal.cxx  server.cxx
test/: 10000_result.txt  1000_result.txt  32bit_result.txt  Makefile.am  gtest.cpp
test/files/: 32bit.txt  bad.txt
